--- a/camperblic/src/main/frontend/src/styles/paymentStyles/Cart.css
+++ b/camperblic/src/main/frontend/src/styles/paymentStyles/Cart.css
@@ -3,15 +3,16 @@
     background-color: cornflowerblue;
 }
 
+.section_wrap {
+    overflow: hidden;
+}
+
+/* ItemlistCart ——— */
+
+/* title —*/
 
 
-/* ItemCart ------ */
-
-/* title ---*/
+/* table —*/
 
 
-/* table ---*/
-
-
-/* cost ---*/
-
+/* cost —*/
