--- a/camperblic/src/main/frontend/src/styles/header.css
+++ b/camperblic/src/main/frontend/src/styles/header.css
@@ -10,6 +10,7 @@ header * {
 
 header {
     position: fixed;
+    top: 0px;
     width: 250px;
     height: 100vh;
 
@@ -19,6 +20,7 @@ header {
 .asideTop {
     width: 100%;
     height: 100%;
+    background-color: black;
 }
 
 .mall,
@@ -36,17 +38,16 @@ header {
 /*    background: black;*/
 /*}*/
 
-h1 {
+.headerLogo {
     display: flex;
     align-items: center;
 
-    padding-left: 10px;
-    height: 80px;
+    padding: 35px 20px;
     border-bottom: 1px solid rgb(66, 66, 66);
     font-size: 30px;
 }
 
-nav {
+header nav {
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -54,10 +55,10 @@ nav {
     border-bottom: 1px solid rgb(66, 66, 66);
 }
 
-.logInBtn {
+.headerBtn {
     text-align: start;
     width: 100%;
-    height: 50px;
+    height: 60px;
     padding-left: 20px;
 
     cursor: pointer;
@@ -66,9 +67,6 @@ nav {
     font-weight: 700;
 
     border: none;
-    border-bottom: 1px solid rgb(66, 66, 66);
-
-    color: rgb(66, 66, 66);
     background-color: black;
 }
 
@@ -101,7 +99,7 @@ nav {
     border-radius: 3%;
 }
 
-nav a {
+header nav a {
     color: white;
     display: flex;
     height: 50px;
@@ -113,7 +111,7 @@ nav a {
     opacity: .5;
 }
 
-nav a:hover {
+header nav a:hover {
     opacity: 1;
 }
 
